--- a/webProject/Web.config
+++ b/webProject/Web.config
@@ -4,6 +4,16 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+
+    <add key="CS" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=mydb.accdb;Persist Security Info = False; " />
+
+  </appSettings>
+  <connectionStrings>
+    <add name="CS" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=mydb.accdb;Persist Security Info = False; " />
+  </connectionStrings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
